<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.museumquiz.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="18dp"
                android:layout_marginTop="18dp"
                android:fontFamily="sans-serif"
                android:text="@string/introduction"
                android:textColor="#303F9F"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/museum" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_margin="25dp"
                android:background="#3F51B5" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:layout_marginLeft="18dp"
                android:fontFamily="sans-serif"
                android:text="@string/question1"
                android:textColor="#757575"
                android:textSize="16sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/name_town"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:hint="Type name here"
                android:inputType="textCapWords"
                android:paddingLeft="2dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_margin="25dp"
                android:background="#3F51B5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:layout_marginLeft="18dp"
                android:fontFamily="sans-serif"
                android:text="@string/question2"
                android:textColor="#757575"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="sans-serif"
                    android:paddingLeft="2dp"
                    android:text="1659"
                    android:textColor="#757575"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/correct_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="sans-serif"
                    android:paddingLeft="2dp"
                    android:text="1759"
                    android:textColor="#757575"
                    android:textSize="16sp" />

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_margin="25dp"
                android:background="#3F51B5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:layout_marginLeft="18dp"
                android:fontFamily="sans-serif"
                android:text="@string/question3"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="sans-serif"
                    android:paddingLeft="2dp"
                    android:text="Ptuj Museum Island"
                    android:textColor="#757575"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/correct_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="sans-serif"
                    android:paddingLeft="2dp"
                    android:text="Berlin Museum Island"
                    android:textColor="#757575"
                    android:textSize="16sp" />

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_margin="25dp"
                android:background="#3F51B5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:layout_marginLeft="18dp"
                android:fontFamily="sans-serif"
                android:text="@string/question4"
                android:textColor="#757575"
                android:textSize="16sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/correct_moma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:fontFamily="sans-serif"
                android:paddingLeft="2dp"
                android:text="Museum of Modern Art"
                android:textColor="#757575"
                android:textSize="16sp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:fontFamily="sans-serif"
                android:paddingLeft="2dp"
                android:text="Museum of Science and Industry"
                android:textColor="#757575"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/correct_van_gogh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:fontFamily="sans-serif"
                android:paddingLeft="2dp"
                android:text="Van Gogh Museum"
                android:textColor="#757575"
                android:textSize="16sp" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="#3F51B5"
                android:fontFamily="sans-serif"
                android:onClick="submit"
                android:text="Submit"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
